# TAgent_General

./: .editorconfig  .eslintrc.cjs  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SOUL.md  Start-TAgent-Dev.bat  Start-TAgent-Dev.command  Stop-TAgent-Dev.bat  Stop-TAgent-Dev.command  bunfig.toml  dev-stop.bat  dev.bat  eslint.config.js  package.json  pyproject.toml  tsconfig.base.json  vitest.config.ts
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
apps/electron/: electron-builder.yml  kscc-config.example.json  package.json  tailwind.config.js  vite.config.ts
apps/electron-linux/: .gitignore  README.md  electron-builder.yml  package.json  quick-start.sh  setup-symlinks.bat  setup-symlinks.sh  tsconfig.json  vite.config.ts
apps/electron/resources/: generate-icons.py  generate-icons.sh  generate-theme-logo-backgrounds-v2.py  generate-tray-icon-from-logo.py  generate-tray-icon.py  icon.icns
apps/electron/scripts/: build-ta-wheels.ts  build.ts  dev-cleanup.ts  dev-kill-shared.ts  dev-split.sh  dev-stop.ts  dist.ts  download-bun.ts  e2e-kanban-dispatcher.cjs  rebuild-native.ts  release.ts  run-electronmon.ts  test-p1-3-compact.ts
docs/: PROGRESS.md  README.md  ta-mcp-architecture.md  ta-tools-analysis.md  verification-2026-06-09.md
docs/archive/plans/: 2026-06-02-im-model-switch-design.md
docs/archive/reports/: 2026-06-05-brand-migration.md
docs/decisions/: 0000-template.md  0001-fusion-architecture.md  0002-ask-mode-composer.md  0003-upstream-feature-roadmap.md
docs/experiments/: README.md
docs/plans/: 2026-05-18-proactive-scheduler-monitor-design.md  2026-06-02-im-model-switch-design.md  2026-06-05-tagent-fusion-design.md  2026-06-05-tagent-server-design.md  2026-06-07-ta-tools-analysis.md  2026-06-09-agent-ui-optimization-plan.md  2026-06-09-verification-checklist.md  2026-06-13-ask-mode-unification-design.md  2026-06-13-context-compaction-architecture.md  2026-06-13-context-usage-breakdown-design.md  2026-06-16-upstream-upgrade-issues.md  2026-06-16-upstream-upgrade-plan.md  2026-06-16-wps-bridge-landing.md  2026-06-18-right-panel-anchor-animation.md  2026-06-24-automation-design.md  2026-06-24-collaboration-design.md  2026-06-24-p0-stability-patches.md  2026-06-24-proma-upstream-borrow-list.md  2026-06-24-upstream-feature-roadmap.md  2026-06-25-draft-restructure-design.md  2026-06-25-kscc-internal-provider-design.md  2026-06-26-asset-library-blender-borrow-design.md  2026-06-26-speed-test-design.md  2026-06-26-workspace-to-project-design.md  2026-06-29-agent-hooks-design.md  2026-06-30-auto-check-design.md  2026-06-30-kanban-exploration-report.md  2026-06-30-kanban-session-handoff.md  2026-06-30-kanban-v1-product-design.md  2026-06-30-skill-slash-command-design.md  2026-06-30-task-kanban-orchestration-design.md  2026-06-30-upstream-alignment-tracker.md  2026-07-01-agent-proactive-enhancement-design.md  2026-07-01-kscc-streaming-and-stuck-analysis.md
docs/process/: 2026-06-24-doc-cleanup-report.md  code-review.md  git-workflow.md  linting.md  release.md  testing.md
docs/reports/: 2026-06-05-codemod-apply-status.md  2026-06-05-codemod-dryrun-on-copy.md  2026-06-05-proma-scope-inventory.md  README.md
macos/: index.html  settings.html
release-notes/: .gitkeep
scripts/: codemod_proma_to_tagent.py  dev-kill-all.ps1  dev-launcher-env.sh  release.py  setup-mac-dev.sh  test-hooks-logic.ts  test-hooks-sdk-integration.ts  test-skill-frontmatter.ts  tier2-rename-assets.py  tier2-rename-configdir.py  tier2-rename.py
scripts/dev/: Start-TAgent-Dev.bat  Start-TAgent-Dev.command  Stop-TAgent-Dev.bat  Stop-TAgent-Dev.command  dev-launcher-env.bat  dev-stop.bat  dev.bat  ensure-electron.ps1  ensure-native-modules.ps1
scripts/hook-demo/: README.md  hook-demo.ts  package.json  tsconfig.json
soul/: ta-agent.md
ta-agent-mcp/: README.md  pyproject.toml  requirements.txt
ta-agent-mcp/src/ta_agent_mcp/: __main__.py  server.py
ta-agent-mcp/src/ta_agent_mcp/tag_store/: __init__.py
ta-agent-mcp/src/ta_agent_mcp/tools/: __init__.py  asset.py  mesh.py  tag_store.py  texture.py
ta-agent-mcp/src/ta_agent_mcp/utils/: output.py
ta-agent-mcp/tests/: test_tools.py
tutorial/: index.html  tutorial.md
(+643 files in other folders)
