[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagent"
version = "0.0.0-dev"
description = "TAgent — game TA domain agent (Python layer)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Frank Danny", email = ""},
]
keywords = ["agent", "ai", "game-ta", "asset-pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# ===== Dependencies =====
dependencies = [
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "Pillow>=10.0.0",
    "trimesh>=4.0.0",
    "mcp>=1.0.0",
    "websockets>=12.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pyinstaller>=6.0.0",
    "types-Pillow",
    "freezegun>=1.4.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]
agent = [
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

# ===== Tools Configuration =====
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["release/", "dist/", "build/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "T",   # flake8-print
    "RUF", # ruff-specific
]
ignore = [
    "S101",  # Use of `assert` (OK in tests)
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "N802"]
"**/tests/*" = ["S101"]
"**/__init__.py" = ["F401"]
"scripts/*" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["tagent", "ta_agent", "proma"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["trimesh", "PIL.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:mcp.*",
    "ignore::DeprecationWarning:anthropic.*",
]

[tool.coverage.run]
source = ["src", "packages"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "release/*",
    "dist/*",
    "build/*",
]

[tool.coverage.report]
fail_under = 80
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
