[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ta-agent-mcp"
version = "0.1.0"
description = "TA (Technical Artist) domain MCP server for TAgent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "TAgent Team" }
]
keywords = ["mcp", "ta", "technical-artist", "game-development"]

dependencies = [
    "mcp>=1.0.0",
    "trimesh>=4.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ta-agent-mcp = "ta_agent_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ta_agent_mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
